# hulk

./: .ghci  .gitignore  LICENSE  README  README.md  hulk.cabal  hulk.conf  hulk.conf.example  stack.yaml
example/: hulk.conf
example/auth/: passwd
example/users/: hulk  hulk2
fastirc-0.2.0/: LICENSE  fastirc.cabal
fastirc-0.2.0/Network/: FastIRC.hs
fastirc-0.2.0/Network/FastIRC/: IO.hs  Messages.hs  ServerSet.hs  Session.hs  Types.hs  Users.hs  Utils.hs
scripts/: server-restart
scripts/upstart/: hulk.conf
src/: GeneratePass.hs  Main.hs  Plugin.stub  StringProcAPI.hs  StringProcPlugin.hs
src/Control/Concurrent/: Delay.hs
src/Control/Monad/: IO.hs
src/Data/: String.hs
src/Data/Time/: JSON.hs
src/Hulk/: Auth.hs  Client.hs  Concurrent.hs  Config.hs  Event.hs  Log.hs  Options.hs  Providers.hs  Server.hs  Server2.hs  Types.hs  Types2.hs
src/Network/Socket/: Util.hs
src/System/IO/: Watch.hs
txt/: MOTD  PREFACE
