name:                hulk
version:             0.2.0
synopsis:            IRC server written in Haskell.
description:         An IRC server with (mandatory) server authentication, log recall, bumping.
                     Intended for private business use or hobby work. See examples/ directory for a demo.
bug-reports:         https://github.com/chrisdone/hulk/issues
license:             BSD3
stability:           Stable
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2010-2013 Chris Done
category:            Network
build-type:          Simple
cabal-version:       >=1.2
extra-source-files:
  README.md
  example/log/events.log
  example/auth/passwd
  example/auth/passwd-key
  example/txt/PREFACE
  example/txt/MOTD
  example/hulk.conf
  example/users/hulk2
  example/users/hulk

library
  exposed-modules:
     Hulk.Server
     Hulk.Options
     Hulk.Client
     Hulk.Config
     Hulk.Types
     Hulk.Auth
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     monad-extras >= 0.3.2.0,
                     base >= 4 && <5,
                     text,
                     ConfigFile,
                     fastirc,
                     network,
                     ghc-prim,
                     time,
                     containers,
                     aeson,
                     mtl,
                     utf8-string,
                     Crypto,
                     cmdargs,
                     strict,
                     filepath,
                     directory,
                     bytestring,
                     split,
                     unix,
                     case-insensitive,
                     monad-extras == 0.3.2.0

executable hulk
  main-is:           Main.hs
  other-modules:     Hulk.Auth,
                     Hulk.Client,
                     Hulk.Config,
                     Hulk.Server,
                     Hulk.Types
  ghc-options:       -threaded -O2 -Wall
  hs-source-dirs:    src
  build-depends:     monad-extras >= 0.3.2.0,
                     base >= 4 && <5,
                     text,
                     ConfigFile,
                     fastirc,
                     network,
                     ghc-prim,
                     time,
                     containers,
                     aeson,
                     mtl,
                     utf8-string,
                     Crypto,
                     cmdargs,
                     strict,
                     filepath,
                     directory,
                     bytestring,
                     split,
                     unix,
                     case-insensitive,
                     monad-extras == 0.3.2.0

executable hulk-generate-pass
  main-is:          GeneratePass.hs
  hs-source-dirs:   src
  build-depends:    base
  ghc-options:       -threaded -O2 -Wall

source-repository head
  type: git
  location: https://github.com/chrisdone/hulk.git
