name:                hulk
version:             0.2.0
synopsis:            IRC server written in Haskell.
description:         An IRC server with (mandatory) server authentication, log recall, bumping.
                     Intended for private business use or hobby work. See examples/ directory for a demo.
bug-reports:         https://github.com/chrisdone/hulk/issues
license:             BSD3
stability:           Stable
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2010-2013 Chris Done
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
  README.md
  example/log/events.log
  example/auth/passwd
  example/auth/passwd-key
  example/txt/PREFACE
  example/txt/MOTD
  example/hulk.conf
  example/users/hulk2
  example/users/hulk

library
  exposed-modules:   Hulk.Server
                     Hulk.Options
                     Hulk.Client
                     Hulk.Config
                     Hulk.Types
                     Hulk.Auth
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     utf8-string      >= 0.3.7,
                     Crypto           >= 4.2.5.1,
                     ConfigFile       >= 1.1.1,
                     mtl              >= 2.1.2,
                     split            >= 0.2.2,
                     containers       >= 0.4.2.1,
                     cmdargs          >= 0.10.7,
                     monad-extras     >= 0.3.2.0,
                     aeson            >= 0.6.2.1,
                     bytestring       >= 0.9.2.1,
                     case-insensitive >= 1.1.0.2,
                     text             >= 0.11.3.1,
                     time             >= 1.4,
                     network          >= 2.4.2.2,
                     fastirc          >= 0.3.0,
                     directory        >= 1.1.0.2,
                     filepath         >= 1.3.0.0,
                     ghc-prim,
                     base

executable hulk
  main-is:           Server.hs
  ghc-options:       -threaded -O2 -Wall
  hs-source-dirs:    src/main
  build-depends:     cmdargs >= 0.10.7,
                     network >= 2.4.2.2,
                     cmdargs >= 0.10.7,
                     unix    >= 2.5.1.1,
                     hulk,
                     base

executable hulk-generate-pass
  main-is:          GeneratePass.hs
  hs-source-dirs:   src/main
  build-depends:    utf8-string >= 0.3.7,
                    Crypto      >= 4.2.5.1,
                    cmdargs     >= 0.10.7,
                    hulk,
                    base
  ghc-options:       -threaded -O2 -Wall

source-repository head
  type: git
  location: https://github.com/chrisdone/hulk.git
